create initial endpoints for remaining tag and user resources
